# ashcraft

./: .gitignore  Cargo.toml  LICENSE  README.md
ashcraft_auth_server/: Cargo.toml  TODO.md
ashcraft_auth_server/src/: lib.rs  main.rs  server.rs  socket_manager.rs
ashcraft_auth_server/src/packets/: logon_proof.rs  reconnect_challenge.rs  reconnect_proof.rs
ashcraft_common/: Cargo.toml
ashcraft_common/src/: lib.rs
ashcraft_database/: Cargo.toml
ashcraft_database/src/: redis.rs
ashcraft_derive/: Cargo.toml
ashcraft_derive/src/: lib.rs
ashcraft_logging/: Cargo.toml
ashcraft_world_packets/: Cargo.toml
ashcraft_world_packets/src/: auth.rs  bank.rs  character.rs  characters.rs  chat.rs  client_packet_impl_read.rs  combat.rs  combat_log.rs  gear.rs  guild.rs  inventory.rs  login.rs  map.rs  misc.rs  movement_block.rs  npc.rs  object.rs  opcodes.rs  query.rs  quest.rs  race.rs  response_code.rs  spell.rs  system.rs  time_sync.rs  totem.rs  transport.rs  tutorial.rs  world_state.rs
ashcraft_world_packets/src/common/: area.rs  class.rs  emotes.rs  gender.rs  helpers.rs
ashcraft_world_server/: Cargo.toml
ashcraft_world_server/src/: lib.rs  main.rs  session_handler.rs
ashcraft_world_server/src/core/: app.rs
ashcraft_world_server/src/core/components/: common.rs  mod.rs  object.rs  player.rs  unit.rs
ashcraft_world_server/src/core/events/: packets.rs
ashcraft_world_server/src/core/systems/: base_pre_update.rs  handle_opcodes.rs  mod.rs
ashcraft_world_server/src/realm/: mod.rs
ashcraft_world_server/src/world/: mod.rs
battlenet_server/: Cargo.toml
battlenet_server/src/: dispatcher.rs  lib.rs  logging.rs  main.rs  socket_manager.rs  utils.rs  web_models.rs
battlenet_server/src/services/: account.rs  authentication.rs  challenge.rs  connection.rs  game_utilities.rs  mod.rs
protocol/: Cargo.toml  build.rs
protocol/protoc/: ClientCancelConnect.proto  TelemetrySharedClientImports.proto  WorldSceneLoadFailed.proto
protocol/src/: errors.rs  messages.rs
rustycraft_auth_server/: Cargo.toml
rustycraft_auth_server/src/: lib.rs  main.rs  server.rs  socket_manager.rs
rustycraft_auth_server/src/packets/: logon_challenge.rs  logon_proof.rs  mod.rs  realm.rs  reconnect_challenge.rs  reconnect_proof.rs
rustycraft_battlenet_server/: Cargo.toml
rustycraft_battlenet_server/src/: lib.rs  main.rs  realmlist.rs  socket_manager.rs  utils.rs  web_handler.rs  web_models.rs
rustycraft_common/: Cargo.toml
rustycraft_common/src/: lib.rs
rustycraft_database/: Cargo.toml
rustycraft_database/src/: lib.rs  redis.rs
rustycraft_derive/: Cargo.toml
rustycraft_derive/src/: lib.rs
rustycraft_ecs/: Cargo.toml
rustycraft_ecs/src/: common.rs  lib.rs  object.rs  player.rs  unit.rs
rustycraft_logging/: Cargo.toml
rustycraft_logging/src/: lib.rs
rustycraft_protocol/: Cargo.toml  build.rs
rustycraft_protocol/protoc/: AuroraError.proto  CASInitError.proto  ClientDisconnect.proto  CriticalStreamingError.proto  WorldLoadFailed.proto  telemetry_extensions.proto
rustycraft_protocol/protoc/bgs/low/pb/client/: account_types.proto  authentication_service.proto  challenge_service.proto  connection_service.proto  content_handle_types.proto  embed_types.proto  ets_types.proto  event_view_types.proto  friends_service.proto  game_utilities_service.proto  invitation_types.proto  notification_types.proto  presence_listener.proto  presence_service.proto  role_types.proto  rpc_config.proto  voice_types.proto
rustycraft_protocol/protoc/bgs/low/pb/client/global_extensions/: message_options.proto  range.proto  routing.proto
rustycraft_protocol/protoc/google/protobuf/: descriptor.proto
rustycraft_protocol/src/: autogen_impls.rs  errors.rs  expansions.rs  lib.rs  races.rs  rpc_responses.rs
rustycraft_world_packets/: Cargo.toml
rustycraft_world_packets/src/: area.rs  auth.rs  bank.rs  character.rs  characters.rs  chat.rs  class.rs  client_packet_impl_read.rs  combat.rs  combat_log.rs  corpse.rs  expansion.rs  game_object.rs  gear.rs  gender.rs  guid.rs  guild.rs  inventory.rs  lfg.rs  lib.rs  login.rs  map.rs  misc.rs  movement_block.rs  movement_flags.rs  npc.rs  object.rs  opcodes.rs  position.rs  power.rs  query.rs  quest.rs  race.rs  response_code.rs  spell.rs  spline.rs  system.rs  time_sync.rs  totem.rs  transport.rs  (+4 more)
rustycraft_world_packets/src/common/: area.rs  class.rs  emotes.rs  expansion.rs  gender.rs  mod.rs  power.rs  school.rs  stats.rs
rustycraft_world_packets/src/objects/: base.rs  calc_update.rs  container.rs  corpse.rs  default.rs  dynamic_object.rs  game_object.rs  helpers.rs  item.rs  macros.rs  mod.rs  object.rs  player.rs  size_helper.rs  traits.rs  unit.rs  utils.rs
rustycraft_world_packets/src/objects/traits/: mod.rs  object_field_impls.rs  storable_impls.rs
rustycraft_world_packets/src/templates/: item.rs
rustycraft_world_server/: Cargo.toml  TODO.md
rustycraft_world_server/.cargo/: config.toml
rustycraft_world_server/src/: classes.rs  client_session.rs  constants.rs  crypt.rs  guid.rs  lib.rs  main.rs  opcodes.rs  races.rs  realm_server.rs  session_handler.rs  socket_manager.rs  utils.rs  world_events.rs  world_listener.rs  world_server.rs  world_session.rs
rustycraft_world_server/src/core/: app.rs  mod.rs
rustycraft_world_server/src/core/commands/: mod.rs  packet_event.rs
rustycraft_world_server/src/core/components/: common.rs  object.rs  player.rs  unit.rs
rustycraft_world_server/src/core/events/: packets.rs
rustycraft_world_server/src/core/systems/: base_pre_update.rs  handle_opcodes.rs  mod.rs
rustycraft_world_server/src/packets/: area.rs  auth.rs  characters.rs  client_config.rs  gear.rs  guid.rs  login.rs  map.rs  mod.rs  movement_block.rs  movement_flags.rs  object.rs  objects.rs  opcodes.rs  race.rs  response_code.rs  system.rs  transport.rs  tutorial.rs  update_flag.rs  update_mask.rs  vector3d.rs
rustycraft_world_server/src/realm/: mod.rs
rustycraft_world_server/src/session_modules/: crypt.rs  mod.rs
rustycraft_world_server/src/world/: mod.rs
world_server/: Cargo.toml
world_server/src/: main.rs
(+36 files in other folders)
