[package]
name = "ashcraft_auth_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ashcraft_logging = { path = "../ashcraft_logging" }
ashcraft_database = { path = "../ashcraft_database" }
ashcraft_common = { path = "../ashcraft_common" }

wow_srp = "0.5"
deku = { git = "https://github.com/sharksforarms/deku.git", rev = "13fc4e9b084042ac77f9a3f6aa366f791ddac646" }
bytes = "1.4"
tokio = { version = "1.25", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
tracing = "0.1"
