[package]
name = "ashcraft_common"
version = "0.1.0"
edition = "2021"

[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ashcraft_database = { path = "../ashcraft_database" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
