[package]
name = "ashcraft_logging"
version = "0.1.0"
edition = "2021"

[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["time", "tracing", "tracing-serde", "json", "local-time", "serde", "serde_json"] }
chrono = "0.4"
