[package]
name = "battlenet_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
protocol = { path = "../protocol" }

bytes = "1.1"
prost = "0.9"
prost-types = "0.9"
tokio = { version = "1.17", features = ["full"] }
log = "0.4"
rustls = "0.20"
rustls-pemfile = "0.3"
tokio-rustls = "0.23"
env_logger = "0.9"
async-trait = "0.1"
configure = "0.1"
futures-util = "0.3"
anyhow = "1.0"
chrono = "0.4"
axum = "0.4"
axum-server = { version = "0.3", features = ["tls-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.8"
flate2 = "1.0"
