[package]
name = "rustycraft_auth_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rustycraft_logging = { path = "../rustycraft_logging" }
rustycraft_database = { path = "../rustycraft_database" }
rustycraft_common = { path = "../rustycraft_common" }

wow_srp = "0.5.1"
deku = "0.13.1"
bytes = "1.1"
tokio = { version = "1.17", features = ["full"] }
log = "0.4"
env_logger = "0.9"
async-trait = "0.1"
configure = "0.1"
futures-util = "0.3"
anyhow = "1.0"
chrono = "0.4"
lazy_static = "1.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.8"
flate2 = "1.0"
