[package]
name = "rustycraft_auth_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rustycraft_logging = { path = "../rustycraft_logging" }
rustycraft_database = { path = "../rustycraft_database" }
rustycraft_common = { path = "../rustycraft_common" }

wow_srp = "0.5.1"
deku = "0.15.1"
bytes = "1.1"
tokio = { version = "1.17", features = ["full"] }
env_logger = "0.10.0"
anyhow = "1.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
tracing = "0.1"
