[package]
name = "rustycraft_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Project dependencies
rustycraft_world_packets = { path = "../rustycraft_world_packets" }

bevy_ecs = "0.9"
bevy_transform = { version = "0.9", features = ["serialize"] }
bevy_math = "0.9"

derive_builder = "0.12"
