[package]
name = "rustycraft_protocol"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "1.1"
prost = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
tokio = { version = "1.17", features = ["full"] }

[build-dependencies]
quick-protobuf = "0.8.0"
protobuf = "3.0.0-alpha.8"
protobuf-parse = "3.0.0-alpha.8"
proc-macro2 = "1.0.36"
convert_case = "0.5.0"
quote = "1.0.16"
prost-types = "0.9.0"
prost-build = "0.9.0"
