[package]
name = "rustycraft_world_packets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustycraft_derive = { path = "../rustycraft_derive" }
paste = "1.0"
derive_builder = "0.12"
thiserror = "1.0"
wow_srp = "0.5"
deku = { git = "https://github.com/sharksforarms/deku.git", rev = "13fc4e9b084042ac77f9a3f6aa366f791ddac646" }
bytes = "1.4"
tracing = "0.1"
bevy_math = "0.9.1"
array-init = "2.1.0"
