[package]
name = "rustycraft_world_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustycraft_logging = { path = "../rustycraft_logging" }
rustycraft_database = { path = "../rustycraft_database" }
rustycraft_common = { path = "../rustycraft_common" }

paste = "1.0.9"
derive_builder = "0.11.2"
wow_srp = { version = "0.5.1", features = ["wrath-header"]}
rand = "0.8"
deku = "0.13.1"
lazy_static = "1.4"
tokio = { version = "1.17" }
anyhow = "1.0"
bytes = "1.1"
async-trait = "0.1"
log = "0.4"
chrono = "0.4"
chrono-tz = "0.6"
enum-iterator = "0.7"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
