[package]
name = "rustycraft_world_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustycraft_logging = { path = "../rustycraft_logging" }
rustycraft_database = { path = "../rustycraft_database" }
rustycraft_common = { path = "../rustycraft_common" }
rustycraft_world_packets = { path = "../rustycraft_world_packets" }

derive_builder = "0.12"
wow_srp = { version = "0.5", features = ["wrath-header"] }
deku = "0.15"
tokio = "1.25"
anyhow = "1.0"
bytes = "1.4"
tracing = "0.1"
bevy_time = "0.9.1"
chrono = "0.4.23"
bevy = { version = "0.9", default-features = false }
